<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/vehicle_no"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittextHeight"
        android:layout_margin="20dp"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:hint="@string/vehicle_number"
        android:textSize="@dimen/fontsize"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_no">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/a_char"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/base"
                android:background="@drawable/edittext_background"
                android:text="@string/a"
                android:textSize="@dimen/fontsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/b_char"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/b_char"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/base"
                android:background="@drawable/edittext_background"
                android:text="@string/b"
                android:textSize="@dimen/fontsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/c_char"
                app:layout_constraintStart_toEndOf="@+id/a_char"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/c_char"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/base"
                android:background="@drawable/edittext_background"
                android:text="@string/c"
                android:textAlignment="center"
                android:textSize="@dimen/fontsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/b_char"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/d_char"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/base"
                android:background="@drawable/edittext_background"
                android:text="@string/d"
                android:textSize="@dimen/fontsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/e_char"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/e_char"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/base"
                android:background="@drawable/edittext_background"
                android:text="@string/e"
                android:textSize="@dimen/fontsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/f_char"
                app:layout_constraintStart_toEndOf="@+id/d_char"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/f_char"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/base"
                android:background="@drawable/edittext_background"
                android:text="@string/f"
                android:textAlignment="center"
                android:textSize="@dimen/fontsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/e_char"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/g_char"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/base"
                android:background="@drawable/edittext_background"
                android:text="@string/g"
                android:textSize="@dimen/fontsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/h_char"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/h_char"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/base"
                android:background="@drawable/edittext_background"
                android:text="@string/h"
                android:textSize="@dimen/fontsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/i_char"
                app:layout_constraintStart_toEndOf="@+id/g_char"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/i_char"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/base"
                android:background="@drawable/edittext_background"
                android:text="@string/i"
                android:textAlignment="center"
                android:textSize="@dimen/fontsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/h_char"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/print">

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:gravity="center"
            android:text="Quantity/No"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/quantity" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittextHeight"
            android:layout_margin="20dp"
            android:background="@drawable/edittext_background"
            android:gravity="center"
            android:hint="@string/quantity_no"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/print" />

    </LinearLayout>


    <Button
        android:id="@+id/print"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/ok_button"
        android:text="@string/print"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
